Added Java Application
-Added login feature.
-Needs to go into the different panels for the different types of users.

--- a/IrisService/IrisService/Web.config
+++ b/IrisService/IrisService/Web.config
@@ -9,15 +9,33 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+
+    <services>
+      <service name="IrisService.Service1" behaviorConfiguration="ServiceBehaviour">
+        <endpoint address="" binding="webHttpBinding" behaviorConfiguration="webBehavior" contract="IrisService.IService1">
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange">
+        </endpoint>
+        <endpoint address="soap" binding="basicHttpBinding" name="S" contract="IrisService.IService1">
+        </endpoint>
+      </service>
+    </services>
+    
     <behaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name="ServiceBehaviour">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
+      <!-- Making it restful -->
+      <endpointBehaviors>
+        <behavior name="webBehavior">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
